Fixed toggling and overlapping of sidebar and topbar

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -72,13 +72,11 @@
 
 /* Topbar styles */
 .topbar {
-  position: sticky;
   top: 0;
-  z-index: 50;
   display: flex;
   align-items: center;
   padding: 1rem;
-  background-color: white;
+  background-color: rgb(180, 179, 179);
   border-bottom: 1px solid rgb(229 231 235);
 }
 
